# SC4003_Intelligent_Agents_AY2025_2026

./: .gitignore  README.md  main.py  pyproject.toml
config/: base.yaml  maze_11.yaml  maze_13.yaml  maze_15.yaml  maze_17.yaml  maze_7.yaml  maze_9.yaml
notebooks/: part_1_visualization.ipynb
report/: REPORT.tex
results/part1/: policy_iteration_policy.txt  policy_iteration_utilities.csv  summary.json  value_iteration_utilities.csv
results/part2/: summary.csv  summary.json
src/: __init__.py  config_io.py  gridworld.py  maze_generator.py  notebook_helpers.py  policy_iteration.py  reporting.py  utils.py  value_iteration.py  visualization.py
tests/: test_assignment.py
